# waybar-cffi

./: .gitignore  CMakeLists.txt  LICENSE
docs/: waybar-cffi-cpu.5.scd  waybar-cffi-gpu.5.scd  waybar-cffi-network.5.scd  waybar-cffi-rapl.5.scd  waybar-cffi-temperature.5.scd
include/: common.hpp  module_base.hpp  wbcffi.txt
include/modules/: cpu_module.hpp  gpu_module.hpp  network_module.hpp  rapl_module.hpp  temperature_module.hpp
src/: common.cpp
src/modules/: cpu_module.cpp  gpu_module.cpp  network_module.cpp  rapl_module.cpp  temperature_module.cpp
